# FreeAgent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  conftest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/collatz/: README.md  pyproject.toml
apps/collatz/schema/: README.md  collatz.d.ts  collatz.schema.json  narrowing.ts  package-lock.json  package.json  tsconfig.json
apps/collatz/src/freeagent/app/collatz/: __init__.py  application.py  entity.py  launch.py  message.py
apps/collatz/tests/: conftest.py  fakes.py  test_application.py  test_entity.py  test_launch.py  test_message.py
apps/collatz/viewer/: README.md  index.html  package-lock.json  package.json  style.css  tsconfig.json
apps/collatz/viewer/src/: api.test.ts  api.ts  main.ts  state.test.ts  state.ts  toast.test.ts  toast.ts
apps/free-agent/: README.md  pyproject.toml
apps/free-agent/src/freeagent_runner/: __init__.py  child.py  cli.py  config.py
apps/free-agent/tests/: noop_abort.yml  noop_app.py  noop_episode.yml  test_child.py  test_cli.py  test_config.py  test_runner_integration.py
apps/recorder/: README.md  pyproject.toml
apps/recorder/src/freeagent_recorder/: __init__.py  cli.py  recorder.py
apps/recorder/tests/: conftest.py  test_recorder_integration.py  test_writer.py
apps/twentyquestions/: README.md  pyproject.toml
apps/twentyquestions/engine/: README.md  pyproject.toml
apps/twentyquestions/engine/src/: twentyquestions_manifest.py
apps/twentyquestions/engine/src/twentyquestions/: __init__.py  cli.py  environment.py  host.py  payloads.py  player.py  schema.py
apps/twentyquestions/engine/tests/: conftest.py  test_episode.py  test_host.py  test_manifest_spec.py  test_payload_schema.py
apps/twentyquestions/examples/: twentyquestions-fake.yml  twentyquestions.yml
apps/twentyquestions/examples/fake/: bob.yml  carol.yml
apps/twentyquestions/manifest/: pyproject.toml
apps/twentyquestions/schemas/: game_over.schema.json
apps/twentyquestions/src/twentyquestions/: __init__.py  cli.py  environment.py  host.py  logging.py  player.py  prompts.py
apps/twentyquestions/tests/: test_episode.py  test_host.py
apps/twentyquestions/viewer/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/twentyquestions/viewer/src/: App.svelte  app.css  config.ts  contract.samples.ts  contract.ts  control.ts  controller.svelte.ts  discovery.browser.test.ts  discovery.ts  main.ts  messages.ts  viewer.browser.test.ts  viewer.svelte.ts  vite-env.d.ts
apps/twentyquestions/viewer/src/lib/: ConnectionStatus.svelte  DiscoveryList.svelte  EpisodePanel.svelte  MessageBubble.svelte  Transcript.svelte
apps/twentyquestions/viewer/src/shell/: EpisodeList.svelte  SettingsPanel.svelte  ToastStack.svelte  ToastStack.test.ts  registry.ts  service.test.ts  service.ts  settings.svelte.ts  toasts.svelte.ts  toasts.test.ts
apps/twentyquestions/viewer/src/skins/twentyquestions/: TwentyQuestions.svelte  TwentyQuestions.toast.test.ts  feed.svelte.ts  index.ts
docker/: README.md  compose.yaml  compose.yml  twenty-questions.sh
docker/freeagent/: Dockerfile
docker/nats/: README.md  docker-compose.yml  nats-server.conf
docker/worker/: Dockerfile
docs/: DESIGN.md  PROMPT.md  launch-process-map.html  process-map.html
docs/decision-history/: 0001-gui-viewers-over-nats.md  0002-control-plane-service.md  0003-the-atemporal-episode.md  0004-app-independent-service.md  0005-the-worker-pool.md  0006-entry-point-application-loading.md  0007-control-plane-data-plane-split.md  0008-core-nats-before-jetstream.md  0009-one-command-app-launch.md  README.md
examples/: twentyquestions-fake.yml  twentyquestions.yml
examples/fake/: alice.yml  host.yml
src/: lib.rs
src/freeagent/: start.py
tests/: test_e2e.py  test_start.py
