[package]
name = "free_agent"
version = "0.1.0"
edition = "2021"
description = "Generic autonomous NATS entity — Free Agent core primitive"

[dependencies]
async-nats = "0.38"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
