[project]
name = "freeagent-workspace"
version = "1.0.0"
description = "FreeAgent workspace root: the freeagent library plus its companion applications."
requires-python = ">=3.12"
dependencies = [
    # The workspace root is the full dev/test environment. Its test suite imports
    # the episode service, so pull the web stack the `service` extra now gates --
    # it was a base dep until ADR-0005 moved it behind the extra so the fat worker
    # image can omit FastAPI/uvicorn.
    "freeagent[service]",
    "twentyquestions",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

# Each app is split into single-language siblings (see ADR-0001): the Python
# half lives in apps/<app>/engine, so the uv workspace globs that, not apps/*.
# A TypeScript apps/<app>/viewer sibling is governed by the root JS workspace
# (pnpm-workspace.yaml) instead, keeping the two toolchains from colliding.
#
# An app may also ship an engine-free `manifest` sibling (ADR-0005): a tiny,
# string-only distribution the slim episode service installs to register the
# app's `freeagent.manifests` entry point without pulling in the engine.
[tool.uv.workspace]
members = ["packages/*", "apps/*/engine", "apps/*/manifest"]

[tool.uv.sources]
freeagent = { workspace = true }
twentyquestions = { workspace = true }
twentyquestions-manifest = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "packages/freeagent/src",
    "apps/twentyquestions/engine/src",
]
# Viewers are TypeScript siblings of each engine; keep their subtrees out of
# ruff entirely so the Python linter never globs a JS/TS tree.
extend-exclude = ["apps/*/viewer"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # implicit string concatenation
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # unused arguments
    "PTH",    # use pathlib
    "RUF",    # ruff-specific
]
ignore = [
    "ANN401",  # payloads are app-defined and opaque; Any is deliberate there
    "ISC001",  # conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ARG001",  # pytest fixtures are injected by name; params can go unused
    "ARG002",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/freeagent/tests",
    "apps/twentyquestions/engine/tests",
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
