[project]
name = "freeagent"
version = "0.1.0"
description = "Real time multi-agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freeagent-api",
    "freeagent-app-collatz",
    "freeagent-sdk",
    "freeagent-worker",
]

[project.scripts]
start = "freeagent.start:start"
stop = "freeagent.start:stop"
reformat = "freeagent.start:reformat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeagent"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
freeagent-api = { workspace = true }
freeagent-app-collatz = { workspace = true }
freeagent-sdk = { workspace = true }
freeagent-worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx2>=0.1",
    "mypy>=1.13",
    "ruff>=0.8",
    "docformatter>=1.7",
    "import-linter>=2.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
    "packages/freeagent-api/src",
    "packages/freeagent-worker/src",
]
explicit_package_bases = true

# A one-sentence invariant, made mechanical: `freeagent-api` may only depend on names
# defined in `freeagent-sdk`. `freeagent` is a namespace package, so each workspace portion is
# listed as its own root; a new application under apps/ must be added to both lists to stay
# covered.
[tool.importlinter]
root_packages = [
    "freeagent.api",
    "freeagent.app.collatz",
    "freeagent.sdk",
    "freeagent.worker",
]

[[tool.importlinter.contracts]]
name = "freeagent-api depends on SDK names only"
type = "forbidden"
source_modules = ["freeagent.api"]
forbidden_modules = ["freeagent.worker", "freeagent.app.collatz"]

[[tool.importlinter.contracts]]
name = "the worker loads applications via entry points, never imports"
type = "forbidden"
source_modules = ["freeagent.worker"]
forbidden_modules = ["freeagent.app.collatz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# `importlib` import mode so that test modules sharing a basename across packages (e.g. every
# workspace member's own `test_application.py`/`test_message.py`) don't collide: the default
# `prepend` mode imports each by its bare basename via `sys.path`, and two files named the same
# abort collection with "import file mismatch". Each `tests/` directory's `conftest.py` puts its own
# directory on `sys.path` so bare sibling-helper imports (`fakes`, `fixtures`, `sample_application`)
# still resolve, which `importlib` mode does not arrange on its own.
addopts = "--strict-markers --import-mode=importlib"
markers = [
    "integration: exercises a real nats-server subprocess; excluded by `-m \"not integration\"`.",
]
