[project]
name = "freeagent-app-collatz"
version = "0.1.0"
description = "Collatz: a deterministic, LLM-free Free Agent application that exercises every SDK path"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freeagent-sdk",
    "pydantic>=2.13.4",
]

[project.entry-points."freeagent.applications"]
collatz = "freeagent.app.collatz:application"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeagent"]

[tool.uv.sources]
freeagent-sdk = { workspace = true }

[tool.mypy]
python_version = "3.12"
strict = true
# Treat src/ (and tests/) as roots so this package is seen only as
# `freeagent.app.collatz.*`. Without this, running mypy from this directory resolves the same file
# under two module names (`collatz.engine` and `freeagent.app.collatz.engine`) and aborts with
# "Source file found twice under different module names" -- the same reason freeagent-sdk pins its
# own mypy_path.
mypy_path = ["src", "tests"]
explicit_package_bases = true
