[project]
name = "free-agent"
version = "1.0.0"
description = "FreeAgent dev runner: launches an episode's environment, agents, and recorder from a YAML config."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
free-agent = "freeagent_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeagent_runner"]

[tool.uv.sources]
freeagent = { workspace = true }
