[project]
name = "freeagent-recorder"
version = "1.0.0"
description = "FreeAgent episode recorder: drains an episode's JetStream stream to a Parquet file."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "nats-py>=2.9",
    "pyarrow>=18.0",
]

[project.scripts]
freeagent-recorder = "freeagent_recorder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeagent_recorder"]

[tool.uv.sources]
freeagent = { workspace = true }
