[project]
name = "twentyquestions"
version = "1.0.0"
description = "Twenty Questions: the FreeAgent sample application — several Player agents and one Host."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twentyquestions"]

[tool.uv.sources]
freeagent = { workspace = true }
