[project]
name = "twentyquestions"
version = "1.0.0"
description = "Twenty Questions: the FreeAgent sample application — several Player agents and one Host."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "pydantic>=2.10",
    "typer>=0.26",
]

[project.entry-points."freeagent.apps"]
twenty-questions = "twentyquestions.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twentyquestions"]

[tool.uv.sources]
freeagent = { workspace = true }
