[project]
name = "twentyquestions"
version = "1.0.0"
description = "Twenty Questions: the FreeAgent sample application — several Player agents and one Host."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]

[project.entry-points."freeagent.apps"]
twenty-questions = "twentyquestions.cli:APP"

# The engine-free launch identity (ADR-0005): class-ref strings the slim
# worker-pool service resolves without importing the engine. Kept in lockstep
# with the AppSpec above by a parity test.
[project.entry-points."freeagent.manifests"]
twenty-questions = "twentyquestions_manifest:MANIFEST"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twentyquestions"]

# A top-level module (not under the engine package) so resolving the manifest
# spec imports no engine code; mapped to the wheel root.
[tool.hatch.build.targets.wheel.force-include]
"src/twentyquestions_manifest.py" = "twentyquestions_manifest.py"

[tool.uv.sources]
freeagent = { workspace = true }
