[project]
name = "twentyquestions"
version = "1.0.0"
description = "Twenty Questions: the FreeAgent sample application — several Player agents and one Host."
requires-python = ">=3.12"
dependencies = [
    "freeagent",
    "pydantic>=2.13.4",
    "typer>=0.26.7",
    # The engine-free launch identity ships as its own slim distribution (ADR-0005)
    # so the episode service can register the `freeagent.manifests` entry point
    # without installing the engine. The engine depends on it only so the parity
    # test (test_manifest_spec) can import `twentyquestions_manifest` alongside the
    # live AppSpec; it is not imported by engine code at runtime.
    "twentyquestions-manifest",
]

[project.entry-points."freeagent.apps"]
twenty-questions = "twentyquestions.cli:APP"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twentyquestions"]

[tool.uv.sources]
freeagent = { workspace = true }
twentyquestions-manifest = { workspace = true }
