[project]
name = "twentyquestions-manifest"
version = "1.0.0"
description = "Twenty Questions: the engine-free launch identity (ADR-0005) the slim episode service installs to enqueue this app's manifests without importing its engine."
requires-python = ">=3.12"
# Only freeagent, for ManifestSpec. Deliberately NOT `twentyquestions`: this
# distribution exists precisely so the slim service can register the
# `freeagent.manifests` entry point WITHOUT pulling in the engine (the
# environment, host, and player classes). Installing this lands one top-level,
# string-only module and nothing else.
dependencies = [
    "freeagent",
]

# The engine-free launch identity (ADR-0005): class-ref strings the slim
# worker-pool service resolves without importing the engine. The companion
# `freeagent.apps` entry point lives in the `twentyquestions` engine package; a
# parity test there keeps the two descriptions in lockstep.
[project.entry-points."freeagent.manifests"]
twenty-questions = "twentyquestions_manifest:MANIFEST"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# A single top-level module (not under any engine package) so resolving the
# manifest spec imports no engine code. Hatch needs an explicit target since
# there is no importable package directory to auto-discover; force-include maps
# the source file to the wheel root.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"src/twentyquestions_manifest.py" = "twentyquestions_manifest.py"

[tool.uv.sources]
freeagent = { workspace = true }
